<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DAPNET</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_postcall">Send paging message</string>
    <string name="welcome_loggedInText">"You are logged in!"</string>
    <!--Strings related to Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="calls">Calls</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="login">Login_Logout</string>
    <string name="please_login">Please Login</string>
    <string name="nav_login">Log in</string>
    <string name="nav_logout">Log out</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>

    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_server">This server name is invalid</string>
    <string name="error_invalid_user">This username is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="server">Server</string>
    <string name="message">Message</string>
    <string name="callsignnames">Callsigns</string>
    <string name="transmittergroupnames">Transmitter group</string>
    <string name="emergency">Emergency?</string>
    <string name="successfully_sent_message">Successfully sent message</string>
    <string name="error_no_internet">Error. Do you have internet access?</string>
    <string name="error_empty_msg">Error. Message empty!</string>
    <string name="error_msg_too_long">Error: Message above 80 characters</string>
    <string name="error_empty_callsignlist">Error. Callsigns empty"</string>
    <string name="generic_error">Generic error</string>

    <string name="help">Help</string>
    <string name="success_welcome">"Success! Welcome "</string>
    <string name="error_credentials">Error. Are your credentials correct?</string>
    <string name="error_logged_in">Error. Are you logged in?</string>
    <string name="error_get_versions">Error getting versions!</string>
    <string name="github_dh3wr"><a href="https://github.com/dh3wr">DH3WR</a></string>
    <string name="github_ihfschwarz"><a href="https://github.com/IHFSchwarz">IHFSchwarz</a></string>
    <string name="hello_welcome_fragment">Welcome!</string>
    <string name="github">DAPNET on GitHub</string>
    <string name="feedback_and_more">Feedback and problems</string>
    <string name="www_hampager_de">www.hampager.de</string>
    <string name="dotdotdot" translatable="false">…</string>
    <string name="send">Send</string>
    <string name="dapnet">DAPNET</string>
    <string name="plchldr">PLCHLDR</string>
    <string name="all">All</string>
    <string name="msg_placeceholder">MSG placeceholder</string>
    <string name="http_hampager_de_8080">http://www.hampager.de:8080</string>
    <string name="in_order_to_use_this_service_please_login">In order to use this service, please login.</string>
    <string name="and">" and "</string>
    <string name="rwth_afu_dapnet_logo_desc">RWTH AFU DAPNET logo</string>
    <string name="default_url_prefix">http://"</string>
    <string name="server_prompt">Choose a server</string>
    <string name="callsign_prompt">Enter your desired callsigns</string>
    <string name="transmittergroup_prompt">Enter your desired transmitter groups</string>
    <string-array name="server_array">
        <item>hampager.de (Internet, default)</item>
        <item>dapnet.db0sda.ampr.org (Hamnet)</item>
        <item>Custom</item>
    </string-array>

    <string name="email_prompt">enter a name or email address</string>

    <string name="hello_blank_fragment">Help is on the way!\n This page will shortly be filled.</string>

    <string name="map">Map</string>
    <string name="online_filter" translatable="false">Online</string>
    <string name="offline_filter" translatable="false">Offline</string>
    <string name="widerange_filter" translatable="false">Widerange</string>
    <string name="personal_filter" translatable="false">Personal</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="type">Type</string>
    <string name="transmission_power">Transmission Power (W)</string>
    <string name="timeslots">Timeslots</string>
    <string name="timeslot">Timeslot</string>
    <string name="owner">Owner</string>
    <string name="owners">Owners</string>
    <string name="statistics_for_dapnet">Statistics for DAPNET</string>
    <string name="name">NAME</string>
    <string name="miniature_logo">Miniature Logo</string>
    <string name="DAPscription" translatable="false">&lt;p style="text-align:center">DAPNET is an international amateur radio paging network developed by the Amateur Radio Group at the RWTH Aachen University. In order to participate and use this app, you need to be a valid amateur radio operator and have an account at &lt;a href="http://www.hampager.de">hampager.de&lt;/a>. If you do not have a an account yet, visit our Website now and follow the instructions for subscription. You should also check out our Help/FAQ.&lt;br> This App has been created by &lt;a href=https://github.com/IHFSchwarz>IHFSchwarz&lt;/a> under supervision of &lt;a href=https://github.com/dh3wr>DH3WR&lt;/a>&lt;/p></string>

    <string name="compose_shortcut_short_label1" translatable="false">Compose</string>
    <string name="compose_shortcut_long_label1" translatable="false">Compose Call</string>
    <string name="compose_disabled_message1" translatable="false">Compose disabled</string>
    <string name="subscribers" translatable="false">Subscribers</string>
    <string name="rubrics" translatable="false">Rubrics</string>
    <string name="transmitters" translatable="false">Transmitters</string>
    <string name="transmitter_groups" translatable="false">Transmitter Groups</string>
    <string name="nodes" translatable="false">Nodes</string>
    <string name="users" translatable="false">Users</string>
    <string name="bubble" translatable="false">Bubble</string>
    <string name="title" translatable="false">Title</string>
    <string name="description">Description</string>
    <string name="address" translatable="false">Address</string>

    <!-- Temp location -->
    <!-- activity_post_call -->
    <string name="callsigns">Call Signs</string>
    <!-- activity_login -->
    <string name="DAPscription2">DAPNET is an international amateur radio paging network developed by the Amateur
        Radio Group at the RWTH Aachen University. In order to participate and use this app, you need to be a
        valid amateur radio operator and have an account at hampager.de. If you do not have a an account yet, sign
        up below for a new ticket with \"New DAPNET Account\" as the help topic.</string>
    <string name="continue_without_signing_in">Continue without signing in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="dapnet_support">https://support.hampager.de</string>
    <!-- MainActivity -->
    <string name="github_dapnet" translatable="false">https://github.com/DecentralizedAmateurPagingNetwork</string>
    <string name="github_feedback" translatable="false">https://github.com/DecentralizedAmateurPagingNetwork/DAPNETApp/issues</string>
    <string name="app_v_core_v_api_v" formatted="true" translatable="false">App %1$s, Core v%2$s, API v%3$s,</string>
    <string name="app_v" formatted="true" translatable="false">App v%1$s</string>
    <!-- "FloatingActionButton" -->
    <string name="send_paging_message">\t\tSend paging message</string>
    <!-- Navigation drawer -->
    <string name="privacy">Privacy</string>
    <string name="home">Home</string>

    <!-- Privacy (mind the formatting) -->
    <string name="privacy_title">&lt;br>&lt;b>&lt;u>Privacy&lt;/b>&lt;/u>&lt;br></string>
    <string name="privacy_content">The operators of these pages take the protection of your personal data very seriously.
        We treat your personal data confidentiality and in accordance with the statutory data protection regulations and
        this data protection declaration.&lt;br>&lt;br>

        The use of our website is usually possible without providing personal data. Insofar as personal data (e.g. name,
        address, ham radio call sign or email address) is collected on our website, this is always done on a voluntary
        basis as far as possible. This data will not be passed on to third parties without your express consent. This does
        not include the distribution of data within the network for its intended operation.&lt;br>&lt;br>

        We would like to point out that data transmission over the Internet (e.g. when communicating by email) can have
        security gaps. In HAMNET in particular, your personal data is also transmitted by law in open language, i.e. without
        encryption. It is not possible to completely protect data from access by third parties. You expressly agree to
        this.&lt;br>&lt;br> </string>

    <string name="data_protection_regulation_title">&lt;b>&lt;u>Special declaration under Regulation (EU) 2016/679 (General Data
        Protection Regulation)&lt;/b>&lt;/u>&lt;br></string>
    <string name="data_protection_regulation_content">By participating in the paging network provided by this page, you
        give a voluntary consent that your personal data and in particular also the paging that you send will be saved,
        processed for the intended operation and shared within the DAPNET network. You can request information about the
        data you have stored, its correction or deletion at any time. Please request this via the
        &lt;a href="https://support.hampager.de/">support ticket system&lt;/a>.&lt;br>&lt;br>

        Esp. Give the above voluntary consent by submitting a request in the ticket system to grant user access or access
        from a broadcaster.&lt;br>&lt;br></string>

    <string name="special_use_title">&lt;b>&lt;u>Special use of the data of a participating broadcaster&lt;/b>&lt;/u>&lt;br></string>
    <string name="special_use_content">If you have a transmitter entered in DAPNET, you voluntarily agree that the transmitter
        data you provide (in particular the position, height and output power) on this website or in other networks or
        platforms (e.g. the APRS network in the Amateur radio) are processed and / or published. This is defined as an
        intended operation. You expressly accept this definition.&lt;br>&lt;br></string>

    <string name="action_accept">Accept</string>

</resources>
