<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--TODO: Add More Options-->
        <item
            android:id="@+id/nav_calls"
            android:icon="@drawable/ic_textsms"
            android:title="@string/calls" />
    </group>

    <item android:title="@string/miscellaneous">
        <menu
            android:id="@+id/nav_misc_menu">
            <item
                android:id="@+id/nav_displayuser"
                android:title="@string/please_login"
                android:visible="false" />
            <item
                android:id="@+id/nav_loginstatus"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/login" />
            <item
                android:id="@+id/nav_githublink"
                android:icon="@mipmap/ic_githubmark"
                android:title="@string/github"
                android:autoLink="web"
                android:linksClickable="true"/>
        </menu>
    </item>

</menu>
