<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/online_filter"
        android:title="@string/online_filter"
        android:orderInCategory="10"
         android:checkable="true"
        android:checked="true"/>
        <!--
        app:showAsAction="ifRoom"
        android:icon="@drawable/filter"-->
    <item
        android:id="@+id/offline_filter"
        android:title="@string/offline_filter"
        android:orderInCategory="10"
        android:checkable="true" />
        <!--app:showAsAction="ifRoom" -->
    <item
        android:id="@+id/widerange_filter"
        android:title="@string/widerange_filter"
        android:orderInCategory="10"
        android:checkable="true"
        android:checked="true" />
    <!--app:showAsAction="ifRoom" -->
    <item
        android:id="@+id/personal_filter"
        android:title="@string/personal_filter"
        android:orderInCategory="10"
        android:checkable="true" />
    <!--app:showAsAction="ifRoom" -->
</menu>