<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bonuspack_bubble_white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/bubble_image"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:paddingLeft="5dp"
        android:visibility="gone"
        android:contentDescription="@string/bubble"
        android:paddingStart="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bubble_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:maxEms="17"
                android:text="@string/title"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/bubble_moreinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0"
                android:background="@drawable/btn_moreinfo"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/bubble_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxEms="17"
            android:text="@string/description"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bubble_subdescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxEms="17"
            android:text="@string/address"
            android:textSize="10sp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>