<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/postcallcoordinator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_postcalltext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/message"
            app:counterEnabled="true"
            app:counterMaxLength="80">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/post_call_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="2"
                android:scrollbars="vertical" />
        </android.support.design.widget.TextInputLayout>

        <!--
        <EditText
            android:id="@+id/post_call_callSignNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til_postcalltext"
            android:ems="10"
            android:hint="@string/callsignnames"
            android:inputType="textPersonName"
            android:maxLines="1" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/callsigns" />

        <de.hampager.dapnetmobile.tokenautocomplete.CallsignsCompletionView
            android:id="@+id/callSignSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/callsign_prompt"
            android:inputType="textFilter|textNoSuggestions" />

        <!--
        <EditText
            android:id="@+id/post_call_transmitterGroupNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/callSignSearchView"
            android:hint="@string/transmittergroupnames"
            android:maxLines="1" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/transmitter_groups" />

        <de.hampager.dapnetmobile.tokenautocomplete.TransmitterGroupCompletionView
            android:id="@+id/transmittergroupSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/transmittergroup_prompt"
            android:inputType="text|textNoSuggestions" />

        <Switch
            android:id="@+id/post_call_emergencyswitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/emergency" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
