<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/call_call_sign"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:maxLength="8"
            android:maxLines="1"
            android:text="@string/plchldr"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="16sp"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/call_transmitter_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/call_call_sign"
            android:layout_toRightOf="@+id/call_call_sign"
            android:text="@string/all" />

        <TextView
            android:id="@+id/call_msg_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/call_transmitter_groups"
            android:layout_alignStart="@+id/call_transmitter_groups"
            android:layout_below="@+id/call_transmitter_groups"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/msg_placeceholder"
            android:textAppearance="?attr/textAppearanceListItem" />


        <TextView
            android:id="@+id/call_more_calls"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/call_call_sign"
            android:layout_marginTop="8dp"
            android:text="@string/dotdotdot"
            android:textAlignment="center"
            android:visibility="visible" />


    </RelativeLayout>
</android.support.v7.widget.CardView>
